[gd_scene load_steps=12 format=3 uid="uid://dxjvwmw4wxg4a"]

[ext_resource type="Script" path="res://entities/door.gd" id="1_3sblt"]
[ext_resource type="Texture2D" uid="uid://c342fiimoqs3l" path="res://assets/tiles.png" id="3_i5vks"]
[ext_resource type="AudioStream" uid="uid://bhj3n6rn1ov4e" path="res://assets/audio/door_open.wav" id="4_t3v1s"]
[ext_resource type="AudioStream" uid="uid://hekmru1puu7a" path="res://assets/audio/door_close.wav" id="5_vrcnb"]
[ext_resource type="AudioStream" uid="uid://dk23ltir30cqw" path="res://assets/audio/door_closed_click.wav" id="6_u5civ"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hco5l"]
atlas = ExtResource("3_i5vks")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7kqa"]
atlas = ExtResource("3_i5vks")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f03q"]
atlas = ExtResource("3_i5vks")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00cy3"]
atlas = ExtResource("3_i5vks")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_82wys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hco5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7kqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f03q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00cy3")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsrlo"]
size = Vector2(77, 78)

[node name="Door" type="Area2D"]
script = ExtResource("1_3sblt")
metadata/_edit_vertical_guides_ = [64.0]
metadata/_edit_horizontal_guides_ = [64.0]

[node name="HiddenEntityContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_82wys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31.5, 34)
shape = SubResource("RectangleShape2D_lsrlo")

[node name="OpenAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_t3v1s")

[node name="CloseAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_vrcnb")

[node name="ClosedClickAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_u5civ")
